Update Tarea Algorithm Trading.ipynb

--- a/Tarea Algorithm Trading.ipynb
+++ b/Tarea Algorithm Trading.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# Algorithmic Trading: Pairs Trade Strategy\n",
     "\n",
-    "Integrantes: Pedro Pablo Alvarez-Santullano,\n",
-    "             Rodrigo Durán\n",
+    "Integrante: Rodrigo Durán\n",
     "\n",
     "El siguiente trabajo esta enfocado a realizar una estrategía de trading con señales estadísticas, más conocido como pairs trading.\n",
     "\n",
